tests/fixtures/errors/binop_literal_width.z
# a leading bare literal resolves i64 (no constraining context); an
# incompatible-width typed operand is a type error, never a silent wrap

main: function is {
    bigi: 9223372036854775807.i64
    ni: (0 - bigi.i128) * 1000
    print "\{ni}"
}
